# xmr_miner-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.txt
src/: lib.rs  main.rs  types.rs
src/cli/: commands.rs  mod.rs
src/config/: config.rs  mod.rs
src/miner/: mod.rs  scheduler.rs  worker.rs
src/miner/algorithm/: cryptonight.rs  mod.rs  randomx.rs
src/network/: mod.rs  node.rs  pool.rs
src/stats/: mod.rs  reporter.rs
src/utils/: error.rs  logging.rs  mod.rs
