[package]
name = "xmr_miner-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-randomx = "0.7.5"      # RandomX bindings
cryptonight-rs = "0.2.1"    # CryptoNight implementation
libc = "0.2.172"
lazy_static = "1.5.0"
rayon = "1.10.0"
tokio = { version = "1.45.1", features = ["full"] }
tungstenite = "0.26.2"
tokio-tungstenite = "0.26.2"
serde_json = "1.0"
url = "2.5.4"
reqwest = { version = "0.12.5", features = ["json"] }
hex = "0.4.3"
hex-literal = "1.0"
thiserror = "2.0.12"
env_logger = "0.11.8"
log = "0.4.27"
crossbeam-channel = "0.5"
clap = {version = "4.5.38", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.22"
num_cpus = "1.16"
sysinfo = "0.35.1"
arc-swap = "1.7.1"
futures = "0.3.31"